<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rarus.Eda v0.4</string>
    <string name="menu_settings">Настройки</string>
    <string name="cardNumber">Номер карточки</string>
    <string name="cardNumberInfo">Введите номер карточки</string>
    <string name="server1">Внешний сервер:</string>
    <string name="server1Info">Адрес внешнего севера:</string>
    <string name="server2">Внутренний сервер:</string>
    <string name="server2Info">Адрес внутреннего севера:</string>
    <string name="date_change">Смена даты</string>
    <string name="save_menu">Сохранить заказ?</string>
    <string name="clear_menu">Очистить меню</string>
    <string name="clear_menu_info">Очистить меню на день?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="save">Сохранить</string>
    <string name="clean">Очистить</string>
    <string name="cleaned">Заказ очищен, необходимо сохранение</string>
    <string name="saved">Заказ сохранен.</string>
    <string name="synchronization">Синхронизация с сервером...</string>
    <string name="updated_menu">Меню обновлено</string>
    <string name="error_request">Запрос сервиса неудачен</string>
    <string name="error_getting">Ошибка при получении меню</string>
    <string name="error_sending">Ошибка при отправке заказа</string>
    <string name="error_connecting">Ошибка при отправке заказа</string>
    <string name="synchronization">Синхронизация</string>
    <string name="download">Идет загрузка</string>
    <string name="onlyWIFI">Загрузка данных только по Wi-Fi</string>
    <string name="anyConnection">Загрузка данных при любом подключении</string>
    <string name="WI_FI">Настройки соеденения</string>
    <string name="cancel">Загрузка отменена</string>
    <string name="exit_info">Действительно хотите выйти?</string>
    <string name="exit">Выход</string>
    <string name="download_menu">Загрузить меню</string>
    <string name="demo">Демо</string>
    <string name="available_ammount">Максимальное доступное количество: </string>
    <string name="rating">Рейтинг: </string>
    <string name="price">Цена: </string>
    <string name="total">Сумма: </string>
    <string name="description">Состав: </string>
    <string name="updated">Обновлено: </string>
    <string name="hrn"> грн.</string>
    <string name="available_ammount">Максимальное доступное количество: </string>
    
</resources>