<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <EditTextPreference
        android:key="cardNumber"
        android:summary="@string/cardNumberInfo"
        android:title="@string/cardNumber" >
    </EditTextPreference>
    <EditTextPreference
        android:key="server1"
        android:summary="@string/server1Info"
        android:title="@string/server1" >
    </EditTextPreference>
    <EditTextPreference
        android:key="server2"
        android:summary="@string/server2Info"
        android:title="@string/server2" >
    </EditTextPreference>Caused by: java.lang.NullPointerException
03-27 06:58:33.343: E/AndroidRuntime(14470): 	at rarus.eatery.activity.FirstRunFragment.setButtonEnabled(FirstRunFragment.java:74)Caused by: java.lang.NullPointerException
03-27 06:58:33.343: E/AndroidRuntime(14470): 	at rarus.eatery.activity.FirstRunFragment.setButtonEnabled(FirstRunFragment.java:74)
    <CheckBoxPreference android:summaryOff="@string/anyConnection" android:summaryOn="@string/onlyWIFI" android:key="onlyWI-FI" android:title="@string/WI_FI"/>


</PreferenceScreen>